@@ -1,5 +1,10 @@
 2018-03-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/meta.c (format8BIM): Allocate space for null termination
+	and null terminate string.  Fixes oss-fuzz 5985
+	"graphicsmagick/coder_8BIMTEXT_fuzzer: Heap-buffer-overflow in
+	formatIPTCfromBuffer". (Credit to OSS-Fuzz)
+
 	* coders/fits.c (ReadFITSImage): Include number of FITS scenes in
 	file size validations.  Fixes oss-fuzz 6781
 	"graphicsmagick/coder_FITS_fuzzer: Timeout in
